manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-applicaz
  namespace: argocd
  labels:
    app: argocd-applicaz
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: argocd
spec:
  - host: argocd-server.argocd.svc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-applicaz
              port:
                number: 80
